Fixed CheckoutFoodCard food name font size, breaks modal on mobile devices

--- a/src/components/common/Card/style/Card.scss
+++ b/src/components/common/Card/style/Card.scss
@@ -117,11 +117,11 @@
         flex-flow: column;
         justify-content: space-evenly;
         margin: auto;
-        h3 {
+        h5 {
             color: GetColorTheme(MainContrast);
             margin: 0;
         }
-        h5 {
+        h6 {
             color: GetColorTheme(Base);
             margin: 0;
         }
